--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Unity WebGL Player | Nicolas_Lienlaf_PaginaWeb</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body> 
     <h1>Meta Genial</h1>
-    <p>Es un juego donde tendremos que ir hacia la copa a travez de una secuencia de plataformas</p>
+    <p id="parrafo1">Es un juego donde tendremos que ir hacia la copa a travez de una secuencia de plataformas</p>
     <button id="apreta el boton" ></button>
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600></canvas>
